--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -10,6 +10,8 @@
   top: 90px;
   right: 40px;
   z-index: 5;
+  overflow: scroll;
+  overflow-y: overlay;
 
   .cart-items {
     height: 240px;
